--- a/paper/incl_intro.tex
+++ b/paper/incl_intro.tex
@@ -5,23 +5,23 @@
 Numerous physical phenomena in materials science, such as crystal plasticity, phase transitions, twinning~\cite{Clayton2011-xq}, and fracture ~\cite{Baldelli2014-ho,Baldelli2021-gc}, can be described by non-linear energy functionals at the mesoscale. These systems exhibit evolution towards minimizing the energy functional, ultimately yielding equilibrium configurations that satisfy boundary conditions. This optimization process is achieved through incremental minimization of a free energy functional. Outcomes of such calculations are elastic fields
 (e.g., displacement, strain, stress, and strain energy density) and the order parameter field depending on the model considered. The corresponding microstructures are crucial to understand and improve the mechanical behavior of materials.
 
-In the realm of material science, one encounters various phenomena governed by intricate mathematical formulations. Notably, there are two distinct types of functionals at play here. First one involves functionals of type $\Psi(\mathbf u)$ non-convex in its argument, the displacement field $\bold u$. These functionals are frequently encountered in theories such as quasi-continuum methods, the multi-well Landau-type theory of reconstructive phase transformations, twinning, and crystal plasticity~\cite{Tadmor1996-qi,Conti2004-yj,Clayton2011-xq,Baggio2019-rs,Baggio2023-qu}. On the other hand, the second type of functionals, denoted as $\Psi(\bold u, \alpha)$, find application in phase-field theories. Here, the scalar phase-field variable $\alpha$ elucidates the substance's state, encompassing aspects like crystal structure, symmetry, lattice orientation, \cite{Finel2010-zw,Ruffini2015-pn,Javanbakht2016-dr} or serving as a damage parameter in variational phase-field theory of fracture~\cite{francfort_marigo1998,Salman2021-mn}. 
+In the realm of material science, one encounters various phenomena governed by intricate mathematical formulations. Notably, there are two distinct types of functionals at play here. First one involves functionals of type $\Psi(\mathbf u)$ non-convex in its argument, the displacement field $\mathbf u$. These functionals are frequently encountered in theories such as quasi-continuum methods, the multi-well Landau-type theory of reconstructive phase transformations, twinning, and crystal plasticity~\cite{Tadmor1996-qi,Conti2004-yj,Clayton2011-xq,Baggio2019-rs,Baggio2023-qu}. On the other hand, the second type of functionals, denoted as $\Psi(\mathbf u, \alpha)$, find application in phase-field theories. Here, the scalar phase-field variable $\alpha$ elucidates the substance's state, encompassing aspects like crystal structure, symmetry, lattice orientation, \cite{Finel2010-zw,Ruffini2015-pn,Javanbakht2016-dr} or serving as a damage parameter in variational phase-field theory of fracture~\cite{francfort_marigo1998,Salman2021-mn}. 
 
-In both cases, one deals with the problem of finding  stable configurations that  can be expressed as $\min_{\boldsymbol{u}} \Psi(\boldsymbol{u})$ or $\min_{\boldsymbol{u},\alpha} \Psi(\boldsymbol{u},\alpha)$.  In a quasi-static loading protocol, the system persists in a metastable state\comment[id=ALB]{statement is unclear, is this a hypothesis?}, representing a local minimum of energy. 
+In both cases, one deals\comment[id=ALB]{the problem is to find stable configurations that achieve min} with the problem of finding  stable configurations that  can be expressed as $\min_{\boldsymbol{u}} \Psi(\boldsymbol{u})$ or $\min_{\boldsymbol{u},\alpha} \Psi(\boldsymbol{u},\alpha)$.  In a quasi-static loading protocol, the system persists in a metastable state\comment[id=ALB]{statement is unclear, is this a hypothesis?}, representing a local minimum of energy. 
 It's known that continuous branches of equilibria can terminate until the system reaches a point where this state is no longer stable. 
 % \added[id=ALB]{Whether smooth or sudden, a transition leads the system to a new equilibrium state.}
 After an instability \added[id=ALB]{threshold}, the system restabilizes \added[id=ALB]{through a state transition,} in a dissipative manner. 
 In this quasi-static setting, the task is to choose a new locally stable equilibrium branch with lower energy. 
 During an isolated switching event, the new equilibrium branch is determined using the steepest descent algorithm\comment[id=ALB]{statement is unclear, is this a hypothesis?}. However, because the energy functionals are nonlinear, they  lack convexity in their arguments and can exhibit multiple local minima or none at all. Consequently, conducting stability and bifurcation analyses becomes crucial to distinguish among the various potential solutions or evolution paths, allowing us to select those that are physically relevant.
 \added[id=ALB]{
-The study of bifurcation and stability of equilibrium configurations in dynamic systems without constraints has led to a systematic investigation of the possible local behaviors at bifurcations points in terms of linearised (canonical, local) representations, allowing for easier classification and analysis of the bifurcation types. 
-The bifurcation criterion (from a fundamental solution) for sytems of ODEs condenses into the study of the existence of solutions different than the fundamental one in an arbitrary neighborhood of the control parameters. Conditions of failure of the implicit function theorem describe the scenario under which a system of equations can realise more than one smooth solution.
-Less clear is the picture in presence of nonlinear constraints associated with internal variables, where quasi-static evolutionary problems defined by optimality conditions take the form of variational inequalities, describing the trajectory of a system in phase space. 
-Here, instead of seeking existence of solutions in an arbitrary neighborhood of the control parameters (which amounts to the invertibility of equilibrium system), a bifurcation condition is associated to the uniqueness of (tangent bundle to a) trajectory in phase space along the system's evolution parametrised by the control parameter(s).
+The study of bifurcation and stability of equilibrium configurations in dynamic systems without constraints has led to a systematic investigation of the possible local behaviors at bifurcations points in terms of linearised (local canonical) representations, allowing for easier classification and analysis of the bifurcation types~\cite{}. 
+The criterion  of bifurcation (from a fundamental solution) for sytems of ODEs condenses the study of the existence of solutions different than the fundamental one in an arbitrary neighborhood of the control parameters. Conditions of failure of the implicit function theorem describe the scenario under which a system of equations can realise more than one smooth solution.
+Less clear is the picture in presence of nonlinear constraints associated with internal variables, where quasi-static evolutionary problems defined by optimality conditions take the form of variational inequalities describing the trajectory of a system in phase space. 
+Here, instead of seeking existence of solutions in an arbitrary neighborhood of the control parameters (which amounts to the invertibility of equilibrium system), a bifurcation condition is associated to the uniqueness of a field of vectors tangent to the trajectory in phase space, along the system's evolution parametrised by the control parameter(s).
 % Namely, the critical point is degenerate in that its second derivative is not invertible.
 % (local) failure of the implicit function theorem.
 % For an evolution, 
-In this work, we aim at characterising the stability (or observability) both of static solutions (at a given control parameter) as well as of evolutionary paths stemming from an initial condition. In this sense, conditions for uniqueness (or non-bifurcation) reduce to the uniqueness of solutions (or lack thereof) for a boundary value problem defined on the \emph{rates of evolution}.
+In this work, we aim at characterising the stability (or observability) both of static solutions (at a given control parameter) as well as to describe the evolutionary paths stemming from an initial condition, in a one-dimensional system that shows a pattern formation and branch transitions. In this sense, conditions for uniqueness (or non-bifurcation) reduce to the uniqueness of solutions (or lack thereof) of a boundary value problem defined for the \emph{rates of evolution}.
 % bifurcation points are the critical loadings at which there is a multiplicity of solutions to the rate problem 
 % ----------
 }
@@ -31,8 +31,8 @@ The loss of stability of typically  energy-minimizing states, which are stable s
 Given the absence of analytical solutions in a strongly non-linear setting, resorting to numerical methods becomes essential for attaining equilibrium configurations that correspond to the minima of the energy functional. The minimization process involves discretizing the continuum fields onto a computational grid using methods such as finite elements, finite differences, or spectral techniques. Afterwards, an iterative solver is employed to seek minimum energy states, with options including the Newton-Raphson method~\cite{Wick2017-bo}, fixed-point iteration~\cite{Chen2019-mn,Kirkesaether_Brun2020-wa,Storvik2021-cd}, line-search-based descent algorithms like steepest descent or conjugate gradient~\cite{Stiefel1952-fw,Dai1999-hz}, quasi-Newton methods such as the highly-efficient Limited-memory Broyden-Fletcher-Goldfarb-Shanno (\textsc{L-BFGS}) approach~\cite{Liu1989-kl}, which involves approximating the Hessian matrix, or more recent advancements like the fast inertial relaxation engine (\textsc{FIRE})~\cite{Guenole2020-tc}. These solvers iteratively refine solutions starting from an initial guess provided as part of the solution procedure. Despite their widespread application, there remains a lack of clear understanding regarding the performance of these algorithms and their effectiveness in locating local minima. 
 
 
-This work centers on the numerical optimization of the  phase-field fracture models.  Notably, in the phase-field theory of fracture, the initiation of a crack is preceded by a localization of the damage field, indicative of the loss of stability of the unfractured solution~\cite{Baldelli2014-ho,Kuhn2015-rt,Baldelli2021-gc,Harandi2023-cd}. Within this study, we will consider two one-dimensional phase-field  fracture models. The first model describes a physical system consisting of a brittle thin film deposited on a rigid substrate,  while the second model pertains to a scenario involving a  unbreakable substrate that can undergo non-uniform deformations.  The fracture phenomenon of thin films bonded to substrates unveils a myriad of complex crack patterns, as evidenced by numerical studies \cite{Baldelli2014-ho,Alessi2019-bx,Hu2020-nt,Salman2021-mn,Baldelli2021-gc}, resembling those observed in natural contexts such as sand or dried mud \cite{Goehring2010-xz}, and even in biological structures like animal skin \cite{Qin2014-wz}. These observations hold particular relevance in the domain of stretchable and flexible electronics \cite{Faurie2019-to,Godard2022-ss} including  self-healing metal thin films on a flexible substrates \cite{Trost2024-ca}.  Despite the one-dimensional setting we adopt here, which allows for analytical predictions, these models reveal a complex landscape of equilibrium states with multiple local minima, eliminating the need for two-dimensional analysis. Moreover, in the absence of irreversibility constraint, bifurcation points from homogeneous solution can be calculated analytically and by employing continuation techniques, all solutions connected to the homogeneous branch and their stability can be identified. 
-In this simple setting, we can then monitor the solutions returned from  the different  numerical optimization techniques. Our findings indicate that under quasi-static conditions, line-search-based descent algorithms not relying on full Hessian can fail to detect expected branch-switching events and may remain on a branch where stability is lost. 
+This work centers on the numerical optimization of the  phase-field fracture models.  Notably, in the phase-field theory of fracture, the initiation of a crack is preceded by a localization of the damage field, indicative of the loss of stability of the unfractured solution~\cite{Baldelli2014-ho,Kuhn2015-rt,Baldelli2021-gc,Harandi2023-cd}. Within this study, we will consider two one-dimensional phase-field  fracture models\comment[id=ALB]{one-dimensional models of a brittle thin film on a substrate }. The first model describes a physical system consisting of a brittle thin film deposited on a rigid substrate,  while the second model pertains to a scenario involving a  unbreakable substrate that can undergo non-uniform deformations.  The fracture phenomenon of thin films bonded to substrates unveils a myriad of complex crack patterns, as evidenced by numerical studies \cite{Baldelli2014-ho,Alessi2019-bx,Hu2020-nt,Salman2021-mn,Baldelli2021-gc}, resembling those observed in natural contexts such as sand or dried mud \cite{Goehring2010-xz}, and even in biological structures like animal skin \cite{Qin2014-wz}. These observations hold particular relevance in the domain of stretchable and flexible electronics \cite{Faurie2019-to,Godard2022-ss} including  self-healing metal thin films on a flexible substrates \cite{Trost2024-ca}.  Despite the one-dimensional setting we adopt here, which allows for analytical predictions, these models reveal a complex landscape of equilibrium states with multiple local minima, eliminating the need for two-dimensional analysis. Moreover, in the absence of irreversibility constraint, bifurcation points from homogeneous solution can be calculated analytically and by employing continuation techniques, all solutions connected to the homogeneous branch and their stability can be identified. 
+In this simple setting, we can then monitor the solutions returned from  the different  numerical optimization techniques. Our findings indicate that under quasi-static conditions, line-search-based descent algorithms not relying on full Hessian can fail to detect expected branch-switching events and may remain on an \added[id=ALB]{unstable} branch \deleted[id=ALB]{ where stability is lost}. 
 We also propose a remedy to this situation, which involves utilizing information from the Hessian of the functional. Furthermore, we discuss the irreversible case separately.
 
 The rest of the paper is organized as follows. In Sections \ref{sec:rigid} and \ref{sec:non-rigid}, we present one-dimensional phase-field fracture models with both rigid and non-rigid elastic foundations, focusing on the analysis  of linear stability regarding trivial solutions. In Section \ref{sec:numerics}, we investigate the nonlinear regime and discuss the selection of equilibrium branches using various numerical optimization algorithms. In the final Section  summarize our results.
