--- a/paper/incl_intro.tex
+++ b/paper/incl_intro.tex
@@ -21,7 +21,7 @@ Here, instead of seeking existence of solutions in an arbitrary neighborhood of 
 % Namely, the critical point is degenerate in that its second derivative is not invertible.
 % (local) failure of the implicit function theorem.
 % For an evolution, 
-In this work, we aim at characterising the stability (or observability) both of static solutions (at a given control parameter) as well as to describe the evolutionary paths stemming from an initial condition, in a one-dimensional system that shows a pattern formation and branch transitions. In this sense, conditions for uniqueness (or non-bifurcation) reduce to the uniqueness of solutions (or lack thereof) of a boundary value problem defined for the \emph{rates of evolution}.
+In this work, we aim at characterising the stability (or observability) both of static solutions (at a given control parameter) as well as to describe the evolutionary paths stemming from an initial condition, in a one-dimensional system that shows pattern formation and branch transitions. In our context, conditions for uniqueness of the evolution path (or non-bifurcation) reduce to the uniqueness of solutions  of a boundary value problem defined for the \emph{rates of evolution}.
 % bifurcation points are the critical loadings at which there is a multiplicity of solutions to the rate problem 
 % ----------
 }
